    (Pierre Huyn via jvs)

    HIVE-1307. More generic and efficient merge
    (Ning Zhang via namit)

    HIVE-1578. Add conf. variable for displaying link to task
    with most failures (Paul Yang via namit)

    HIVE-1293. Concurrency Model for Hive
    (Namit Jain via jvs)

    HIVE-675. Add database/schema support for Hive
    (Carl Steinbach via namit)

  IMPROVEMENTS

    HIVE-1394. Do not update transient_lastDdlTime if the partition is modified by a housekeeping
    operation (Ning Zhang via namit)

    HIVE-1430. Dont run serialize plan by default (Ning Zhang via namit)

    HIVE-1443. Add an API to turn off bucketing (Paul Yang via namit)

    HIVE-1447. Speed up reflection method calls (Zheng via He Yongqiang)

    HIVE-1462. Report progress in FileSinkOperator works in multiple directory
    case
    (Siying Dong via Ning Zhang)

    HIVE-1469. replace isArray() calls and remove LOG.isInfoEnabled() in
    Operator.forward()
    (Yongqiang He via Ning Zhang)

    HIVE-1463. Hive output file names are unnecessarily large
    (Joydeep Sen Sarma via Ning Zhang)

    HIVE-1229. Replace dependencies on HBase deprecated API.
    (Basab Maulik via jvs)

    HIVE-1513. hive starter scripts should load admin/user supplied script for
    configurability
    (Joydeep Sen Sarma via Ning Zhang)

    HIVE-1495. supply correct information to hooks and lineage for
    index rebuild
    (He Yongqiang via jvs)

    HIVE-1512. Need to get hive_hbase-handler to work with hbase
    versions 0.20.4 0.20.5 and cloudera CDH3 version
    (Basab Maulik via jvs)

    HIVE-1581. CompactIndexInputFormat should create split only for files in the index output file
    (He Yongqiang via namit)

    HIVE-1441. Extend ivy offline mode to cover metastore downloads
    (John Sichi via Ning Zhang)

    HIVE-1523. Enable some tests in miniMR mode
    (Joydeep Sen Sarma via namit)

    HIVE-1536. Add support for JDBC PreparedStatements
    (Sean Flatley via jvs)

  OPTIMIZATIONS

  BUG FIXES