@@ -33,5 +33,8 @@
     <menu name="Developer Guide">
       <item name="Issue Tracking (JIRA)" href="https://issues.apache.org/jira/browse/HIVE"/>
     </menu>
+    <menu name="User Defined Functions">
+      <item name="reflect" href="/udf/reflect.html" />
+    </menu>
   </body>
 </project>
