@@ -1,0 +1,147 @@
+PREHOOK: query: DESCRIBE FUNCTION reflect
+PREHOOK: type: DESCFUNCTION
+POSTHOOK: query: DESCRIBE FUNCTION reflect
+POSTHOOK: type: DESCFUNCTION
+reflect(class,method[,arg1[,arg2..]]) calls method with reflection
+PREHOOK: query: DESCRIBE FUNCTION EXTENDED reflect
+PREHOOK: type: DESCFUNCTION
+POSTHOOK: query: DESCRIBE FUNCTION EXTENDED reflect
+POSTHOOK: type: DESCFUNCTION
+reflect(class,method[,arg1[,arg2..]]) calls method with reflection
+Use this UDF to call Java methods by matching the argument signature
+
+PREHOOK: query: EXPLAIN EXTENDED
+SELECT reflect("java.lang.String", "valueOf", 1),
+       reflect("java.lang.String", "isEmpty"),
+       reflect("java.lang.Math", "max", 2, 3),
+       reflect("java.lang.Math", "min", 2, 3),
+       reflect("java.lang.Math", "round", 2.5),
+       reflect("java.lang.Math", "exp", 1.0),
+       reflect("java.lang.Math", "floor", 1.9)
+FROM src LIMIT 1
+PREHOOK: type: QUERY
+POSTHOOK: query: EXPLAIN EXTENDED
+SELECT reflect("java.lang.String", "valueOf", 1),
+       reflect("java.lang.String", "isEmpty"),
+       reflect("java.lang.Math", "max", 2, 3),
+       reflect("java.lang.Math", "min", 2, 3),
+       reflect("java.lang.Math", "round", 2.5),
+       reflect("java.lang.Math", "exp", 1.0),
+       reflect("java.lang.Math", "floor", 1.9)
+FROM src LIMIT 1
+POSTHOOK: type: QUERY
+ABSTRACT SYNTAX TREE:
+  (TOK_QUERY (TOK_FROM (TOK_TABREF src)) (TOK_INSERT (TOK_DESTINATION (TOK_DIR TOK_TMP_FILE)) (TOK_SELECT (TOK_SELEXPR (TOK_FUNCTION reflect "java.lang.String" "valueOf" 1)) (TOK_SELEXPR (TOK_FUNCTION reflect "java.lang.String" "isEmpty")) (TOK_SELEXPR (TOK_FUNCTION reflect "java.lang.Math" "max" 2 3)) (TOK_SELEXPR (TOK_FUNCTION reflect "java.lang.Math" "min" 2 3)) (TOK_SELEXPR (TOK_FUNCTION reflect "java.lang.Math" "round" 2.5)) (TOK_SELEXPR (TOK_FUNCTION reflect "java.lang.Math" "exp" 1.0)) (TOK_SELEXPR (TOK_FUNCTION reflect "java.lang.Math" "floor" 1.9))) (TOK_LIMIT 1)))
+
+STAGE DEPENDENCIES:
+  Stage-1 is a root stage
+  Stage-0 is a root stage
+
+STAGE PLANS:
+  Stage: Stage-1
+    Map Reduce
+      Alias -> Map Operator Tree:
+        src 
+          TableScan
+            alias: src
+            Select Operator
+              expressions:
+                    expr: reflect('java.lang.String','valueOf',1)
+                    type: string
+                    expr: reflect('java.lang.String','isEmpty')
+                    type: string
+                    expr: reflect('java.lang.Math','max',2,3)
+                    type: string
+                    expr: reflect('java.lang.Math','min',2,3)
+                    type: string
+                    expr: reflect('java.lang.Math','round',2.5)
+                    type: string
+                    expr: reflect('java.lang.Math','exp',1.0)
+                    type: string
+                    expr: reflect('java.lang.Math','floor',1.9)
+                    type: string
+              outputColumnNames: _col0, _col1, _col2, _col3, _col4, _col5, _col6
+              Limit
+                File Output Operator
+                  compressed: false
+                  GlobalTableId: 0
+                  directory: file:/tmp/edward/hive_2010-08-28_17-57-13_337_8190255539843975720/-ext-10001
+                  NumFilesPerFileSink: 1
+                  table:
+                      input format: org.apache.hadoop.mapred.TextInputFormat
+                      output format: org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
+                      properties:
+                        columns _col0,_col1,_col2,_col3,_col4,_col5,_col6
+                        columns.types string:string:string:string:string:string:string
+                        serialization.format 1
+                  TotalFiles: 1
+                  MultiFileSpray: false
+      Needs Tagging: false
+      Path -> Alias:
+        pfile:/home/edward/hive-trunk/build/ql/test/data/warehouse/src [src]
+      Path -> Partition:
+        pfile:/home/edward/hive-trunk/build/ql/test/data/warehouse/src 
+          Partition
+            base file name: src
+            input format: org.apache.hadoop.mapred.TextInputFormat
+            output format: org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
+            properties:
+              bucket_count -1
+              columns key,value
+              columns.types string:string
+              file.inputformat org.apache.hadoop.mapred.TextInputFormat
+              file.outputformat org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
+              location pfile:/home/edward/hive-trunk/build/ql/test/data/warehouse/src
+              name src
+              serialization.ddl struct src { string key, string value}
+              serialization.format 1
+              serialization.lib org.apache.hadoop.hive.serde2.lazy.LazySimpleSerDe
+              transient_lastDdlTime 1283043430
+            serde: org.apache.hadoop.hive.serde2.lazy.LazySimpleSerDe
+          
+              input format: org.apache.hadoop.mapred.TextInputFormat
+              output format: org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
+              properties:
+                bucket_count -1
+                columns key,value
+                columns.types string:string
+                file.inputformat org.apache.hadoop.mapred.TextInputFormat
+                file.outputformat org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
+                location pfile:/home/edward/hive-trunk/build/ql/test/data/warehouse/src
+                name src
+                serialization.ddl struct src { string key, string value}
+                serialization.format 1
+                serialization.lib org.apache.hadoop.hive.serde2.lazy.LazySimpleSerDe
+                transient_lastDdlTime 1283043430
+              serde: org.apache.hadoop.hive.serde2.lazy.LazySimpleSerDe
+              name: src
+            name: src
+
+  Stage: Stage-0
+    Fetch Operator
+      limit: 1
+
+
+PREHOOK: query: SELECT reflect("java.lang.String", "valueOf", 1),
+       reflect("java.lang.String", "isEmpty"),
+       reflect("java.lang.Math", "max", 2, 3),
+       reflect("java.lang.Math", "min", 2, 3),
+       reflect("java.lang.Math", "round", 2.5),
+       reflect("java.lang.Math", "exp", 1.0),
+       reflect("java.lang.Math", "floor", 1.9)
+FROM src LIMIT 1
+PREHOOK: type: QUERY
+PREHOOK: Input: default@src
+PREHOOK: Output: file:/tmp/edward/hive_2010-08-28_17-57-13_827_84846656517328687/-mr-10000
+POSTHOOK: query: SELECT reflect("java.lang.String", "valueOf", 1),
+       reflect("java.lang.String", "isEmpty"),
+       reflect("java.lang.Math", "max", 2, 3),
+       reflect("java.lang.Math", "min", 2, 3),
+       reflect("java.lang.Math", "round", 2.5),
+       reflect("java.lang.Math", "exp", 1.0),
+       reflect("java.lang.Math", "floor", 1.9)
+FROM src LIMIT 1
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@src
+POSTHOOK: Output: file:/tmp/edward/hive_2010-08-28_17-57-13_827_84846656517328687/-mr-10000
+1	true	3	2	3	2.7182818284590455	1.0
